--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         </main>
 
         <aside>
+            <b>
             <h3>Sidebar Links</h3>
+            </b>
+            <hr>
             <ul>
                 <li><a href="#">Link 1</a></li>
                 <br>
@@ -64,10 +67,13 @@
             </ul>
             <br>
             <br>
-
+            <b>
             <h3>Other Widgets</h3>
+            </b>
             <hr>
-            <p>This is Photoshop's version of Lorem Ipsum...</p>
+            <p>
+                This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit
+            </p>
         </aside>
     </div>
 
