--- a/index.html
+++ b/index.html
@@ -1,85 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
+    <title>HTML5</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML 5</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
 
-    <header>
-        <h1>HTML<span>5</span></h1>
-        <nav>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <li><a href="#">Link 4</a></li>
-                <li><a href="#">Link 5</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <div class="container">
-        <main>
-            <article>
-                <div class="img-placeholder"></div>
-                <div class="content">
-                    <h2>This is a Lorem Ipsum Heading</h2>
-                    <p>Sed non mauris vitae erat consequat auctor eu in elit...</p>
-                    <a href="#">Read More</a>
-                </div>
-            </article>
-            <hr> <!-- Divider -->
-            <article>
-                <div class="img-placeholder"></div>
-                <div class="content">
-                    <h2>This is a Lorem Ipsum Heading</h2>
-                    <p>Sed non mauris vitae erat consequat auctor eu in elit...</p>
-                    <a href="#">Read More</a>
-                </div>
-            </article>
-            <hr> <!-- Divider -->
-            <article>
-                <div class="img-placeholder"></div>
-                <div class="content">
-                    <h2>This is a Lorem Ipsum Heading</h2>
-                    <p>Sed non mauris vitae erat consequat auctor eu in elit...</p>
-                    <a href="#">Read More</a>
-                </div>
-            </article>
-        </main>
+    <div style="background:rgb(75, 75, 71);padding:5px">
 
-        <aside>
-            <b>
-            <h3>Sidebar Links</h3>
-            </b>
-            <hr>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <br>
-                <li><a href="#">Link 2</a></li>
-                <br>
-                <li><a href="#">Link 3</a></li>
-                <br>
-                <li><a href="#">Link 4</a></li>
-            </ul>
-            <br>
-            <br>
-            <b>
-            <h3>Other Widgets</h3>
-            </b>
-            <hr>
-            <p>
-                This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit
-            </p>
-        </aside>
+    </div>
+    <!-- MAIN container -->
+<div class="container">
+
+    <div class="header">
+        <h1><span class="html">HTML</span><span class="five">5</span></h1>
     </div>
 
-    <footer>
-        <p>Copyright YourSite. All rights reserved.</p>
-    </footer>
+
+    <div class="navbar">
+        <a href="#">Link</a><div class="linkb"></div>
+        <a href="#">Link</a><div class="linkb"></div>
+        <a href="#">Link</a><div class="linkb"></div>
+        <a href="#">Link</a><div class="linkb"></div>
+        <a href="#">Link</a><div class="linkb"></div>
+
+    </div>
+
+
+    <div class="row">
+        <div class="side">
+            <br>
+            <div class="rowcontent">
+            <div class="rectangle-1"></div>
+            <h1>This is a Lorem Ipsum Heading</h1>
+            <p class="text1">Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent
+                per conubia nostra, per inceptos himenaeos. Mauris in erat justo.</p>
+            <h3>Read more</h3>
+            </div>
+            <div class="break"></div>
+            <div class="rowcontent">
+            <div class="rectangle-1"></div>
+            <h1>This is a Lorem Ipsum Heading</h1>
+            <p class="text1">Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent
+                per conubia nostra, per inceptos himenaeos. Mauris in erat justo.</p>
+            <h3>Read more</h3>
+            </div>
+            <!-- <br> -->
+            <div class="break"></div>
+            <div class="rowcontent">
+            <div class="rectangle-1"></div>
+            <h1>This is a Lorem Ipsum Heading</h1>
+            <p class="text1">Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent
+                per conubia nostra, per inceptos himenaeos. Mauris in erat justo.</p>
+            <h3>Read more</h3>
+            </div>
+            <!-- <br> -->
+            <div class="break"></div>
+        </div>
+        <!-- RIGHT SIDE content -->
+         <aside>
+        <div class="main">
+            <h2>Sidebar links</h2>
+            <div class="break"></div>
+                <div class="sidelinks">
+                    <li><a href="#">Link 1</a></li>
+                    <br>
+                    <li><a href="#">Link 2</a></li>
+                    <br>
+                    <li><a href="#">Link 3</a></li>
+                    <br>
+                    <li><a href="#">Link 4</a></li>
+                    <br>
+                </div>
+            <h2>Other Widgets</h2>
+            <div class="break"></div>
+            <p class="p2"><span >This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+                    sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+                    elit.</span>
+
+                <br>
+                <br>
+                Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+            </p>
+            <br>
+
+        </div>
+    </div>
+</aside>
+
+    <div class="footer">
+        <h2 style="color: aliceblue;">Copyright<span style="color:#f58220"> YourSite. </span> All rights reserved</h2>
+    </div>
+</div>
 
 </body>
+
 </html>
